Fix layout bug on candidates page, add filtering support to contributors and contributions pages

--- a/app/assets/stylesheets/candidates.css.scss
+++ b/app/assets/stylesheets/candidates.css.scss
@@ -76,6 +76,10 @@ border-bottom: 3px dotted #77d;
   background: wheat;
 }
 
+table#candidates {
+  clear : both;
+}
+
 table#candidates th.hilite {
   background-color: yellow;
 }
